[project]
name = "minecraft_elytra_flyer"
version = "0.1.0"
description = "An AI elytra flyer trained with PPO for Minecraft."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "psutil>=7.2.2",
    "stable-baselines3[extra]>=2.7.1",
]

[[tool.uv.index]]
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"
default = true
